# OmniPlayer

./: .gitignore  Cargo.toml  build.bat  go.mod  launch.bat  run.bat  rust-toolchain.toml  setup.bat
.cargo/: config.toml
assets/shaders/: hdr_tonemap.wgsl  yuv_to_rgb.wgsl
cmd/media-indexer/: main.go
cmd/subtitle-service/: main.go
crates/omni-audio/: Cargo.toml
crates/omni-audio/src/: lib.rs  output.rs  resampler.rs
crates/omni-core/: Cargo.toml
crates/omni-core/src/: lib.rs  probe.rs
crates/omni-core/src/decoder/: audio.rs  context.rs  mod.rs  subtitle.rs  video.rs
crates/omni-core/src/hw_accel/: mod.rs  windows.rs
crates/omni-core/src/pipeline/: clock.rs  demuxer.rs  mod.rs
crates/omni-player/: Cargo.toml  build.rs
crates/omni-player/src/: app.rs  config.rs  main.rs  player.rs  services.rs  video_callback.rs
crates/omni-player/src/ui/: controls.rs  file_browser.rs  image_viewer.rs  info_overlay.rs  mod.rs  player_view.rs  playlist.rs  settings.rs  url_dialog.rs
crates/omni-renderer/: Cargo.toml
crates/omni-renderer/src/: frame_upload.rs  hdr.rs  lib.rs  video_renderer.rs
pkg/ipc/: bridge.go
pkg/metadata/: tmdb.go
pkg/subtitles/: client.go
